# e-commerce-oltp-faker

./: README.md  pyproject.toml
sql/: init_tables
sql/dynamic_report/: daily_revenue  monthly_revenue  orders_status_summary  seller_performance  top_products_per_brand
src/: config.py  main.py  transactions_data.py
