[tool.poetry]
name = "e-commerce-oltp-system"
version = "0.1.0"
description = ""
authors = ["tlgb <tlgbkakaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^40.11.0"
pandas = "^3.0.1"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
